apps/node/node-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs
  namespace: assignment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
        - name: nodejs
          image: gcr.io/myproject-382612/nodejs:a1
          ports:
            - containerPort: 80
