apps/node/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
  namespace: assignment
spec:
  selector:
    app: nodejs
  ports:
    - name: http
      port: 80
      targetPort: 80
