apps/node/node-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodejs
  namespace: assignment
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: /nodejs
      rewrite:
        uri: /
      route:
        - destination:
            host: nodejs
            port:
              number: 80
